--- a/.gitignore
+++ b/.gitignore
@@ -149,8 +149,9 @@ chromedriver.exe
 # csvfiles but include folder container
 proxy_list.csv
 csvfiles/*
-recaptcha_requests/*
+no_google_business_address/*
 !csvfiles/.gitkeep
+!no_google_business_address/.gitkeep
 business_list*.csv
 
 # Credentials
