--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,8 @@ no_google_business_address/*
 !csvfiles/.gitkeep
 !no_google_business_address/.gitkeep
 business_list*.csv
+*.xlsx
+*.csv
 
 # Credentials
 creds.py
